fixed font issue

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </a>
 </header>
 
-        <p class="name" ><span>James</span> Wheatley</p>
+        <p class="name" ><span>JAMES</span> WHEATLEY</p>
 
         <div class="container">
                 <nav>
