--- a/homeFiles/projects.html
+++ b/homeFiles/projects.html
@@ -49,6 +49,22 @@
               <li><b>Github Repository:</b> <a href="github.com"> Click Here</a></li>
             </ul>
           </div>
+          <div>
+            <a href="http://www.threadedleather.com"><img class="tilePic" src="img/threaded.png"></a>
+            <ul class="project_details">
+              <p class="project_title">Threaded Leather Co.</p>
+              <li>Started a business producing and selling fine watch straps online which I now manage.</li>
+              <li></li>
+            </ul>
+          </div>
+          <div>
+            <a href="img/bigdata2.pdf"><img class="tilePic" src="img/bigdata.png"></a>
+            <ul class="project_details">
+              <p class="project_title">Big Data Science Project</p>
+              <li>A year long group project working in Python with large amounts of data for Qualtrics. Click above for a poster I designed explaining more details.</li>
+              <li></li>
+            </ul>
+          </div>
 
 
 
