changed some wording

--- a/homeFiles/projects.html
+++ b/homeFiles/projects.html
@@ -53,7 +53,7 @@
             <a href="http://www.threadedleather.com"><img class="tilePic" src="img/threaded.png"></a>
             <ul class="project_details">
               <p class="project_title">Threaded Leather Co.</p>
-              <li>Started a business producing and selling fine watch straps online which I now manage.</li>
+              <li>I started a company producing and selling fine watch straps online. I take care of the branding, sourcing, customer service, and oversee production.</li>
               <li></li>
             </ul>
           </div>
@@ -61,7 +61,7 @@
             <a href="img/bigdata2.pdf"><img class="tilePic" src="img/bigdata.png"></a>
             <ul class="project_details">
               <p class="project_title">Big Data Science Project</p>
-              <li>A year long group project working in Python with large amounts of data for Qualtrics. Click above for a poster I designed explaining more details.</li>
+              <li>A group project for a large survey company (Qualtrics). We placed third out of 20 teams. Above is the poster I designed to represent our work.</li>
               <li></li>
             </ul>
           </div>
