--- a/index.html
+++ b/index.html
@@ -1,39 +1,48 @@
 <html>
 <head>
-        <title>
-                James C. Wheatley's Professional Profile
-        </title>
+  <title>
+    James C. Wheatley's Professional Profile
+  </title>
 
-<link rel="stylesheet" href="homeFiles/main.css">
-<link rel="icon"
-        type="image/png"
-        href="homeFiles/img/jwFavicon.png" />
+  <link rel="stylesheet" href="homeFiles/main.css">
+  <link rel="icon"
+  type="image/png"
+  href="homeFiles/img/jwFavicon.png" />
+  <link rel="stylesheet/less" type="text/css" href="homeFiles/styles.less" />
+  <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.0.2/less.min.js" ></script>
 
-<script>
-</script>
 
 </head>
 
 
-<body class="home">
-<header>
-        <a href="index.html">
-                <img class="logo" src="homeFiles/img/jw_logo.png">
-        </a>
-</header>
+<body>
+  <div class="home">
+  <header>
+    <a href="index.html">
+      <img class="logo" src="homeFiles/img/jw_logo.png">
+    </a>
+  </header>
 
-        <p class="name" ><span>JAMES</span> WHEATLEY</p>
+  <p class="name" ><span>EMILY</span> NELSON</p>
 
-        <div class="container">
-                <nav>
-                        <ul class="nav">
-                                <li><a href="index.html">HOME</a></li>
-                                <li><a href="homeFiles/about.html">ABOUT</a></li>
-                                <li><a href="homeFiles/projects.html">PROJECTS</a></li>
-                                <li><a href="homeFiles/contact.html">CONTACT</a></li>
-                        </ul>
-                </nav>
-        </div>
+  <div class="container">
+    <nav>
+      <ul class="nav">
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="homeFiles/about.html">ABOUT</a></li>
+        <li><a href="homeFiles/projects.html">PROJECTS</a></li>
+        <li><a href="homeFiles/contact.html">CONTACT</a></li>
+      </ul>
+    </nav>
+  </div>
+  </div>
+
+  <!-- <div class="arrowcontainer"> -->
+  <!-- <a data-scroll href="#blog"> -->
+    <!-- <div class="arrow"></div> -->
+  <!-- </a> -->
+<!-- </div> -->
+<!-- <div id="blog"></div> -->
 
 
 
