--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
   </div>
   </div>
 
-  <!-- <div class="arrowcontainer"> -->
-  <!-- <a data-scroll href="#blog"> -->
-    <!-- <div class="arrow"></div> -->
-  <!-- </a> -->
-<!-- </div> -->
-<!-- <div id="blog"></div> -->
+  <div class="arrowcontainer">
+  <a data-scroll href="#blog">
+    <div class="arrow"></div>
+  </a>
+</div>
+<div id="blog"></div>
 
 
 
