changed name back

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </a>
   </header>
 
-  <p class="name" ><span>EMILY</span> NELSON</p>
+  <p class="name" ><span>JAMES</span> WHEATLEY</p>
 
   <div class="container">
     <nav>
@@ -37,12 +37,12 @@
   </div>
   </div>
 
-  <div class="arrowcontainer">
-  <a data-scroll href="#blog">
-    <div class="arrow"></div>
-  </a>
-</div>
-<div id="blog"></div>
+  <!-- <div class="arrowcontainer"> -->
+  <!-- <a data-scroll href="#blog"> -->
+    <!-- <div class="arrow"></div> -->
+  <!-- </a> -->
+<!-- </div> -->
+<!-- <div id="blog"></div> -->
 
 
 
