--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
 </head>
 
 
-<body>
-  <div class="home">
-  <header>
-    <a href="index.html">
-      <img class="logo" src="homeFiles/img/jw_logo.png">
-    </a>
-  </header>
+<body class= "home">
 
-  <p class="name" ><span>JAMES</span> WHEATLEY</p>
+    <header>
+      <a href="index.html">
+        <img class="logo" src="homeFiles/img/jw_logo.png">
+      </a>
+    </header>
 
-  <div class="container">
-    <nav>
-      <ul class="nav">
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="homeFiles/about.html">ABOUT</a></li>
-        <li><a href="homeFiles/projects.html">PROJECTS</a></li>
-        <li><a href="homeFiles/contact.html">CONTACT</a></li>
-      </ul>
-    </nav>
-  </div>
-  </div>
+    <p class="name" ><span>JAMES</span> WHEATLEY</p>
+
+    <div>
+      <nav>
+        <ul class="nav">
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="homeFiles/about.html">ABOUT</a></li>
+          <li><a href="homeFiles/projects.html">PROJECTS</a></li>
+          <li><a href="homeFiles/contact.html">CONTACT</a></li>
+        </ul>
+      </nav>
+    </div>
+
 
   <!-- <div class="arrowcontainer"> -->
   <!-- <a data-scroll href="#blog"> -->
