added new project

--- a/homeFiles/about.html
+++ b/homeFiles/about.html
@@ -26,7 +26,7 @@
    <body class="about">
 
       <div class="bio">
-        <p>I am software/web developer and entrepreneur seeking a full time web development position.</p>
+        <p>I am a software/web developer and entrepreneur seeking a full time web development position.</p>
         <p>I recently graduated from BYU with a degree in Computer Science and minor in Business Management.</p>
         <p>I am a small business owner on the side. Producing and selling fine watch straps online.</p>
         <p>I am also a Nationals fan, amateur pyrotechnician, Eagle Scout, skier, and maker.</p>
