--- a/homeFiles/projects.html
+++ b/homeFiles/projects.html
@@ -1,73 +1,85 @@
-<html>
-    <head>
-     <title>James C. Wheatley's Online Portfolio</title>
-     <link rel="stylesheet" href="main.css">
-     <link rel="icon"
-        type="image/png"
-        href="img/jwFavicon.png" />
-   </head>
+  <html>
+      <head>
+       <title>James C. Wheatley's Online Portfolio</title>
+       <link rel="stylesheet" href="main.css">
+       <link rel="icon"
+          type="image/png"
+          href="img/jwFavicon.png" />
+     </head>
 
-   <div class="wrapper">
-     <div>
-       <a href="../index.html">
-         <img class="logo" src="img/jw_logo.png">
-       </a>
+     <div class="wrapper">
+       <div>
+         <a href="../index.html">
+           <img class="logo" src="img/jw_logo.png">
+         </a>
+       </div>
+       <div>
+         <ul class="topnav">
+                 <li><a href="../index.html">HOME</a></li>
+                 <li><a href="about.html">ABOUT</a></li>
+                 <li><a href="projects.html">PROJECTS</a></li>
+                 <li><a href="contact.html">CONTACT</a></li>
+         </ul>
+       </div>
      </div>
-     <div>
-       <ul class="topnav">
-               <li><a href="../index.html">HOME</a></li>
-               <li><a href="about.html">ABOUT</a></li>
-               <li><a href="projects.html">PROJECTS</a></li>
-               <li><a href="contact.html">CONTACT</a></li>
-       </ul>
-     </div>
-   </div>
 
-   <body>
-     <div class="projects">
-          <div>
-            <a href="http://www.jcwheatley.com/labs/lab-2-rest-services-jcwheatley/"><img class="tilePic" src="img/REST.png"></a>
+     <body>
+       <div class="projects">
+            <div>
+              <a href="http://www.jcwheatley.com/labs/lab-2-rest-services-jcwheatley/"><img class="tilePic" src="img/REST.png"></a>
+                <ul class="project_details">
+                  <p class="project_title">Weather/StackExchange Query</p>
+                  <li>Run queries on Utah weather and Stack Exchange questions.</li>
+                  <li><b>Skills:</b> RESTful Services</li>
+                  <li><b>Github Repository:</b> <a href="github.com"> Click Here</a></li>
+                </ul>
+            </div>
+            <div>
+              <a href="http://www.jcwheatley.com/labs/lab-3-angular-directives-jcwheatley"><img class="tilePic" src="img/angular.png"></a>
               <ul class="project_details">
-                <p class="project_title">Weather Lookup/StackExchange Query</p>
-                <li><b>Technologies:</b> RESTful Services</li>
+                <p class="project_title">Creating and Displaying Users</p>
+                <li>Simply add a name, email, and photo.</li>
+                <li><b>Skills:</b> Angular Directives</li>
                 <li><b>Github Repository:</b> <a href="github.com"> Click Here</a></li>
               </ul>
-          </div>
-          <div>
-            <a href="http://www.jcwheatley.com/labs/lab-3-angular-directives-jcwheatley"><img class="tilePic" src="img/angular.png"></a>
-            <ul class="project_details">
-              <p class="project_title">Creating and Displaying Users</p>
-              <li><b>Technologies:</b> Angular Directives</li>
-              <li><b>Github Repository:</b> <a href="github.com"> Click Here</a></li>
-            </ul>
-          </div>
-          <div>
-            <a href="http://www.jcwheatley.com/WeightLog/index.html"><img class="tilePic" src="img/weight.png"></a>
-            <ul class="project_details">
-              <p class="project_title">Weightlifting Log</p>
-              <li><b>Technologies:</b> Angular</li>
-              <li><b>Github Repository:</b> <a href="github.com"> Click Here</a></li>
-            </ul>
-          </div>
-          <div>
-            <a href="http://www.threadedleather.com"><img class="tilePic" src="img/threaded.png"></a>
-            <ul class="project_details">
-              <p class="project_title">Threaded Leather Co.</p>
-              <li>I started a company producing and selling fine watch straps online. I take care of the branding, sourcing, customer service, and oversee production.</li>
-              <li></li>
-            </ul>
-          </div>
-          <div>
-            <a href="img/bigdata2.pdf"><img class="tilePic" src="img/bigdata.png"></a>
-            <ul class="project_details">
-              <p class="project_title">Big Data Science Project</p>
-              <li>A group project for a large survey company (Qualtrics). We placed third out of 20 teams. Above is the poster I designed to represent our work.</li>
-              <li></li>
-            </ul>
-          </div>
+            </div>
+            <div>
+              <a href="http://www.jcwheatley.com/WeightLog/index.html"><img class="tilePic" src="img/weight.png"></a>
+              <ul class="project_details">
+                <p class="project_title">Weightlifting Log</p>
+                <li>Track weightlifting exercises and progress.</li>
+                <li><b>Skills:</b> Angular</li>
+                <li><b>Github Repository:</b> <a href="github.com"> Click Here</a></li>
+              </ul>
+            </div>
+            <div>
+              <a href="./files/responsive/index.html"><img class="tilePic" src="img/gigdream.png"></a>
+              <ul class="project_details">
+                <p class="project_title">GigDream Concept</p>
+                <li>A responsive concept for a Gigabit Internet Service Provider Business</li>
+                <li><b>Skills:</b> HTML, CSS, Media Queries</li>
+                <li><b>Github Repository:</b> <a href="github.com"> Click Here</a></li>
+              </ul>
+            </div>
+            <div>
+              <a href="http://www.threadedleather.com"><img class="tilePic" src="img/threaded.png"></a>
+              <ul class="project_details">
+                <p class="project_title">Threaded Leather Co.</p>
+                <li>I started a company producing and selling fine watch straps online. I take care of the branding, sourcing, customer service, and oversee production.</li>
+                <li></li>
+              </ul>
+            </div>
+            <div>
+              <a href="img/bigdata2.pdf"><img class="tilePic" src="img/bigdata.png"></a>
+              <ul class="project_details">
+                <p class="project_title">Big Data Science Project</p>
+                <li>A group project for a large survey company (Qualtrics). We placed third out of 20 teams. Above is the poster I designed to represent our work.</li>
+                <li></li>
+              </ul>
+            </div>
 
 
 
-     </div>
-   </body>
-   </html>
+       </div>
+     </body>
+     </html>
