added google analytics

--- a/homeFiles/projects.html
+++ b/homeFiles/projects.html
@@ -29,7 +29,7 @@
               <a href="http://www.jcwheatley.com/labs/lab-2-rest-services-jcwheatley/"><img class="tilePic" src="img/REST.png"></a>
                 <ul class="project_details">
                   <p class="project_title">Weather/StackExchange Query</p>
-                  <li>Run queries on Utah weather and Stack Exchange questions.</li>
+                  <li>Running queries on Utah weather and Stack Exchange threads.</li>
                   <li><b>Skills:</b> RESTful Services</li>
                   <li><b>Github Repository:</b> <a href="github.com"> Click Here</a></li>
                 </ul>
@@ -38,7 +38,7 @@
               <a href="http://www.jcwheatley.com/labs/lab-3-angular-directives-jcwheatley"><img class="tilePic" src="img/angular.png"></a>
               <ul class="project_details">
                 <p class="project_title">Creating and Displaying Users</p>
-                <li>Simply add a name, email, and photo.</li>
+                <li>Simply add a name, email, and photo to a list.</li>
                 <li><b>Skills:</b> Angular Directives</li>
                 <li><b>Github Repository:</b> <a href="github.com"> Click Here</a></li>
               </ul>
