fixed broken github links

--- a/homeFiles/projects.html
+++ b/homeFiles/projects.html
@@ -31,7 +31,7 @@
                   <p class="project_title">Weather/StackExchange Query</p>
                   <li>Running queries on Utah weather and Stack Exchange threads.</li>
                   <li><b>Skills:</b> RESTful Services</li>
-                  <li><b>Github Repository:</b> <a href="github.com"> Click Here</a></li>
+                  <li><b>Github Repository:</b> <a href="https://github.com/jcwheatley/weather-and-stack-exchange-query"> Click Here</a></li>
                 </ul>
             </div>
             <div>
@@ -40,7 +40,7 @@
                 <p class="project_title">Creating and Displaying Users</p>
                 <li>Simply add a name, email, and photo to a list.</li>
                 <li><b>Skills:</b> Angular Directives</li>
-                <li><b>Github Repository:</b> <a href="github.com"> Click Here</a></li>
+                <li><b>Github Repository:</b> <a href="https://github.com/jcwheatley/Angular-Directives"> Click Here</a></li>
               </ul>
             </div>
             <div>
@@ -49,7 +49,7 @@
                 <p class="project_title">Weightlifting Log</p>
                 <li>Track weightlifting exercises and progress.</li>
                 <li><b>Skills:</b> Angular</li>
-                <li><b>Github Repository:</b> <a href="github.com"> Click Here</a></li>
+                <li><b>Github Repository:</b> <a href="https://github.com/jcwheatley/Weight-Log"> Click Here</a></li>
               </ul>
             </div>
             <div>
@@ -58,7 +58,7 @@
                 <p class="project_title">GigDream Concept</p>
                 <li>A responsive concept for a Gigabit Internet Service Provider Business</li>
                 <li><b>Skills:</b> HTML, CSS, Media Queries</li>
-                <li><b>Github Repository:</b> <a href="github.com"> Click Here</a></li>
+                <li><b>Github Repository:</b> <a href="https://github.com/jcwheatley/Responsive-Web-Design"> Click Here</a></li>
               </ul>
             </div>
             <div>
