added new project

--- a/homeFiles/projects.html
+++ b/homeFiles/projects.html
@@ -77,6 +77,14 @@
                 <li></li>
               </ul>
             </div>
+            <div>
+              <a href="./files/laurensteimle/index.html"><img class="tilePic" src="img/lsd.png"></a>
+              <ul class="project_details">
+                <p class="project_title">Lauren Steimle Design</p>
+                <li>*In progress* Freelance work for a friend, learned how to implement full sized background video and JavaScript photo library.</li>
+                <li><b>Skills:</b> HTML, CSS, JavaScript</li>
+              </ul>
+            </div>
 
 
 
