added details to last project and updated resume

--- a/homeFiles/projects.html
+++ b/homeFiles/projects.html
@@ -83,6 +83,7 @@
                 <p class="project_title">Lauren Steimle Design</p>
                 <li>*In progress* Freelance work for a friend, learned how to implement full sized background video and JavaScript photo library.</li>
                 <li><b>Skills:</b> HTML, CSS, JavaScript</li>
+                <li><b>Github Repository: </b><a href="https://github.com/jcwheatley/website/tree/master/homeFiles/files/laurensteimle">Click Here</a></li>
               </ul>
             </div>
 
