added contact pageto ls website

--- a/homeFiles/files/laurensteimle/contact.html
+++ b/homeFiles/files/laurensteimle/contact.html
@@ -10,7 +10,25 @@
 <body>
     <header class="v-header container">
         <div class="contact-wrapper">
-            
+            <form>
+                <p>
+                    <input type="text" name="name" placeholder="name *">
+                </p>
+                <p>
+                    <input type="email" name="email" placeholder="email *">
+                </p>
+                <p class="full">
+                    <input type="text" name="subject" placeholder="subject">
+                </p>
+                <p class="full">
+                    <textarea name="body"rows="6" placeholder="if you're a bird, i'm a bird..."></textarea>
+                </p>
+                <p class="full">
+                    <button>send</button>
+                </p>
+
+
+            </form>
         </div>
         <div class="left-panel">
             <div id="branding">
