--- a/homeFiles/files/laurensteimle/projects.html
+++ b/homeFiles/files/laurensteimle/projects.html
@@ -15,9 +15,9 @@
                 <div class="left-column">
                     <img src="media/logos/740.png" alt="image">
                     <h3>740 FIFTEENTH STREET</h3>
-                    <p>brand identity, print, web, email campaign & direct mail.</p>
-                    <a href="http://www.740fifteenth.com">www.740fifteenth.com</a>
-                    <p>Described as historical, industrial & masculine, this brand
+                    <p class="tags">brand identity, print, web, email campaign & direct mail.</p>
+                    <a class="site" href="http://www.740fifteenth.com">www.740fifteenth.com</a>
+                    <p class="copy">Described as historical, industrial & masculine, this brand
                          this brand takes its inspiration from the film Gangs of New York.
                           The building, located at 740 15th Street NW in Washington, D.C.,
                            is 1 block from the White House and boasts original brick walls
@@ -81,8 +81,8 @@
                 <div class="left-column">
                     <img src="media/logos/Fondre.png" alt="image">
                     <h3>FONDRE</h3>
-                    <p>brand identity, magazine layout & photography</p>
-                    <p>Inspired by culinary love, fondre is a magazine dedicated 
+                    <p class="tags">brand identity, magazine layout & photography</p>
+                    <p class="copy">Inspired by culinary love, fondre is a magazine dedicated 
                         to grilled cheese. By elevating a simple comfort food to 
                         a sophisticated lifestyle, fondre dives deeper into exploring 
                         creativity in an unconventional, melty way. The large size 
@@ -147,8 +147,8 @@
                 <div class="left-column">
                         <img src="media/logos/PaperCrown.png" alt="image">
                         <h3>PAPER CROWN</h3>
-                        <p>brand identity & packaging</p>
-                        <p>A brand idea for paper crown, a boutique clothing brand 
+                        <p class="tags">brand identity & packaging</p>
+                        <p class="copy">A brand idea for paper crown, a boutique clothing brand 
                             designed by Lauren Conrad. Inspired by the hall of 
                             mirrors at the Palace of Versailles[MS1] , the shopping 
                             bag design is decorated with an intricate gold frame and 
@@ -206,8 +206,8 @@
                 <div class="left-column">
                     <img src="media/logos/Calomiris.png" alt="image">
                     <h3>THE CALOMIRIS BUILDING</h3>
-                    <p>brand identity, print & email campaign</p>
-                    <p>Few art movements are as fun as the 1920's and 
+                    <p class="tags">brand identity, print & email campaign</p>
+                    <p class="copy">Few art movements are as fun as the 1920's and 
                         Art Deco. A building built in the height of 
                         the era with architecture to match, The William 
                         Calomiris Building's brand is fun & exciting. 
@@ -250,8 +250,8 @@
                 <div class="left-column">
                         <img src="media/logos/PaperCrown.png" alt="image">
                         <h3>Ellsworth and Ernest</h3>
-                        <p>brand identity & packaging</p>
-                        <p>Had a bad day? how bad? Got a ticket bad or got 
+                        <p class="tags">brand identity & packaging</p>
+                        <p class="copy">Had a bad day? how bad? Got a ticket bad or got 
                             dumped bad? Ellsworth & Ernest is a whiskey/root 
                             beer cocktail that will soothe a soul troubled by 
                             parking violations, breakups, and everything in 
@@ -299,9 +299,9 @@
                 <div class="left-column">
                         <img src="media/logos/Madison.png" alt="image">
                         <h3>The Madison Office Building</h3>
-                        <p>web, print & direct mail</p>
-                        <a href="http://www.madisonofficebuilding.com">www.madisonofficebuilding.com</a>
-                        <p>Click the link to above to see the website for yourself. 
+                        <p class="tags">web, print & direct mail</p>
+                        <a class="site" href="http://www.madisonofficebuilding.com">www.madisonofficebuilding.com</a>
+                        <p class="copy">Click the link to above to see the website for yourself. 
                             This beautiful office building attached to the Madison 
                             hotel shares beautiful amenities -  from the restaurants 
                             to the fitness center. A timelapse video placed on the 
@@ -357,9 +357,9 @@
                 <div class="left-column">
                         <img src="media/logos/NavyLeague.png" alt="image">
                         <h3>THE NAVY LEAGUE BUILDING</h3>
-                        <p>brand identity, print, web, photography & packaging</p>
-                        <a href="http://www.2300wilson.com">www.2300wilson.com</a>
-                        <p>Packaging design was excitedly anticipated and a new challenge 
+                        <p class="tags">brand identity, print, web, photography & packaging</p>
+                        <a class="site" href="http://www.2300wilson.com">www.2300wilson.com</a>
+                        <p class="copy">Packaging design was excitedly anticipated and a new challenge 
                             to dive into. Summer was right around the corner and a perfect 
                             time to highlight the sunny outdoor terrace of the vacancy. 
                             The boxes were fully custom designed including the size, shape, 
