finished photo gallery

--- a/homeFiles/files/laurensteimle/photo.html
+++ b/homeFiles/files/laurensteimle/photo.html
@@ -4,13 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/lightbox.min.css">
+    <script src="js/lightbox-plus-jquery.min.js"></script>
+
     <title>Lauren Steimle</title>
 </head>
 <body>
     <header class="v-header container">
         <div class="photo-wrapper">
-            
+            <div class="gallery">
+                <a href="media/photoGallery/photo1.png" data-lightbox="mygallery" data-title="ROMA, ITALIA"><img src="media/pgCropped/photo1.png"></a>
+                <a href="media/photoGallery/photo2.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo2.png"></a>
+                <a href="media/photoGallery/photo3.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo3"></a>
+                <a href="media/photoGallery/photo4.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo4"></a>
+                <a href="media/photoGallery/photo5.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo5.png"></a>
+                <a href="media/photoGallery/photo6.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo6"></a>
+                <a href="media/photoGallery/photo7.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo7"></a>
+                <a href="media/photoGallery/photo8.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo8.png"></a>
+                <a href="media/photoGallery/photo9.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo9.png"></a>
+                <a href="media/photoGallery/photo10.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo10"></a>
+                <a href="media/photoGallery/photo11.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo11.png"></a>
+                <a href="media/photoGallery/photo12.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo12"></a>
+            </div>
         </div>
         <div class="left-panel">
             <div id="branding">
