added delay transition to about page, started on mobile version

--- a/homeFiles/files/laurensteimle/photo.html
+++ b/homeFiles/files/laurensteimle/photo.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/lightbox.min.css">
     <script src="js/lightbox-plus-jquery.min.js"></script>
 
-    <title>Lauren Steimle</title>
+    <title>Lauren Steimle | photo</title>
 </head>
 <body>
     <header class="v-header container">
@@ -30,7 +30,7 @@
         </div>
         <div class="left-panel">
             <div id="branding">
-                <img src="media/ls_logo.png" alt="Lauren Steimle Designs Logo">
+                <img src="media/ls_logo_gold.png" alt="Lauren Steimle Designs Logo">
             </div>
             <nav>
                 <ul class="nav">
