--- a/homeFiles/files/laurensteimle/updates.html
+++ b/homeFiles/files/laurensteimle/updates.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Lauren Steimle</title>
+    <title>Lauren Steimle | updates</title>
 </head>
 <body>
     <header class="v-header container">
-        <div class="update-wrapper">
+        <div class="updates-wrapper">
             
         </div>
         <div class="left-panel">
             <div id="branding">
-                <img src="media/ls_logo.png" alt="Lauren Steimle Designs Logo">
+                <img src="media/ls_logo_gold.png" alt="Lauren Steimle Designs Logo">
             </div>
             <nav>
                 <ul class="nav">
