--- a/homeFiles/files/laurensteimle/about.html
+++ b/homeFiles/files/laurensteimle/about.html
@@ -5,16 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Lauren Steimle</title>
+    <title>Lauren Steimle | about</title>
 </head>
 <body>
     <header class="v-header container">
         <div class="about-wrapper">
-            
+                <div class="left-about">
+                    <h1>Hello,</h1>
+                    <h2>it's me...</h2>
+                    <p><b>lauren steimle.</b></p>
+                    <p>as a designer, i'm especially passionate about creating 
+                        completely custom brands that tell a unique story. my 
+                        expertise lie in full brand identities, website design 
+                        & above all my one true love, print collateral.</p>
+                    <p class="small-paragraph">as a person, i'm passionate about gender equality, mexican 
+                        food, travel & golden retriever puppies. as a native of 
+                        san diego & previous north shore resident, i'm happiest 
+                        in warm climates by the coast. playing and listening to 
+                        live music has always been my therapy & one day i hope 
+                        to find myself at a florence & the machine concert. i 
+                        try to keep myself together but you can usually find me 
+                        laughing at things that aren't meant to funny. </p>
+
+                        <p class="small-paragraph"> currently causing ruckus in: washington, d.c. </p>
+                </div>
+                <div class="right-about">
+                    <img src="media/ls_portrait.png">
+                </div>
         </div>
         <div class="left-panel">
             <div id="branding">
-                <img src="media/ls_logo.png" alt="Lauren Steimle Designs Logo">
+                <img src="media/ls_logo_gold.png" alt="Lauren Steimle Designs Logo">
             </div>
             <nav>
                 <ul class="nav">
