--- a/homeFiles/files/laurensteimle/index.html
+++ b/homeFiles/files/laurensteimle/index.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="style.css">
     <title>Lauren Steimle</title>
 </head>
-<body>
+<body class="home-body">
     <header class="v-header container">
         <div class="video-wrapper">
             <video src="media/ls_video.mp4" autoplay="true" loop="true"></video>
+            <img class="mobile-logo" src="media/ls_logo.png">
         </div>
         <div class="left-panel">
             <div id="branding">
-                <img src="media/ls_logo.png" alt="Lauren Steimle Designs Logo">
+                <img src="media/ls_logo_gold.png" alt="Lauren Steimle Designs Logo">
             </div>
             <nav>
                 <ul class="nav">
