more work on mobile version

--- a/homeFiles/files/laurensteimle/index.html
+++ b/homeFiles/files/laurensteimle/index.html
@@ -11,6 +11,16 @@
     <header class="v-header container">
         <div class="video-wrapper">
             <video src="media/ls_video.mp4" autoplay="true" loop="true"></video>
+            <label class="mobile-menu-icon" for="toggle">&#9776</label>
+            <input class="mobile-menu-icon" type="checkbox" id="toggle">
+            <div class="mobile-nav">
+                <a class="current-mobile" href="index.html">home</a>
+                <a href="projects.html">projects</a>
+                <a href="photo.html">photo</a>
+                <a href="about.html">about</a>
+                <a href="updates.html">updates</a>
+                <a href="contact.html">contact</a>
+            </div>
             <img class="mobile-logo" src="media/ls_logo.png">
         </div>
         <div class="left-panel">
