added more mobile functionality. Fixed bug with oversized logos

--- a/homeFiles/files/laurensteimle/about.html
+++ b/homeFiles/files/laurensteimle/about.html
@@ -7,9 +7,20 @@
     <link rel="stylesheet" href="style.css">
     <title>Lauren Steimle | about</title>
 </head>
-<body>
+<body id="grey-theme">
     <header class="v-header container">
         <div class="about-wrapper">
+            <label class="mobile-menu-icon" for="toggle">&#9776</label>
+            <input class="mobile-menu-icon" type="checkbox" id="toggle">
+            <div class="mobile-nav">
+                <a class="current-mobile" href="index.html">home</a>
+                <a href="projects.html">projects</a>
+                <a href="photo.html">photo</a>
+                <a href="about.html">about</a>
+                <!-- <a href="updates.html">updates</a> -->
+                <a href="contact.html">contact</a>
+            </div>
+
                 <div class="left-about">
                     <h1>Hello,</h1>
                     <h2>it's me...</h2>
@@ -33,7 +44,7 @@
                     <img src="media/ls_portrait.png">
                 </div>
         </div>
-        <div class="left-panel">
+        <div class="left-panel" id="grey-theme">
             <div id="branding">
                 <img src="media/ls_logo_gold.png" alt="Lauren Steimle Designs Logo">
             </div>
@@ -43,7 +54,7 @@
                     <li><a href="projects.html">projects</a></li>
                     <li><a href="photo.html">photo</a></li>
                     <li class="current"><a href="about.html">about</a></li>
-                    <li><a href="updates.html">updates</a></li>
+                    <!-- <li><a href="updates.html">updates</a></li> -->
                     <li><a href="contact.html">contact</a></li>
                 </ul>
             </nav>
