--- a/homeFiles/files/laurensteimle/index.html
+++ b/homeFiles/files/laurensteimle/index.html
@@ -18,7 +18,7 @@
                 <a href="projects.html">projects</a>
                 <a href="photo.html">photo</a>
                 <a href="about.html">about</a>
-                <a href="updates.html">updates</a>
+                <!-- <a href="updates.html">updates</a> -->
                 <a href="contact.html">contact</a>
             </div>
             <img class="mobile-logo" src="media/ls_logo.png">
@@ -33,7 +33,7 @@
                     <li><a href="projects.html">projects</a></li>
                     <li><a href="photo.html">photo</a></li>
                     <li><a href="about.html">about</a></li>
-                    <li><a href="updates.html">updates</a></li>
+                    <!-- <li><a href="updates.html">updates</a></li> -->
                     <li><a href="contact.html">contact</a></li>
                 </ul>
             </nav>
