--- a/homeFiles/files/laurensteimle/contact.html
+++ b/homeFiles/files/laurensteimle/contact.html
@@ -10,6 +10,17 @@
 <body>
     <header class="v-header container">
         <div class="contact-wrapper">
+            <label class="mobile-menu-icon" for="toggle">&#9776</label>
+            <input class="mobile-menu-icon" type="checkbox" id="toggle">
+            <div class="mobile-nav">
+                <a class="current-mobile" href="index.html">home</a>
+                <a href="projects.html">projects</a>
+                <a href="photo.html">photo</a>
+                <a href="about.html">about</a>
+                <!-- <a href="updates.html">updates</a> -->
+                <a href="contact.html">contact</a>
+            </div>
+
             <form>
                 <p>
                     <input type="text" name="name" placeholder="name *">
@@ -40,7 +51,7 @@
                     <li><a href="projects.html">projects</a></li>
                     <li><a href="photo.html">photo</a></li>
                     <li><a href="about.html">about</a></li>
-                    <li><a href="updates.html">updates</a></li>
+                    <!-- <li><a href="updates.html">updates</a></li> -->
                     <li class="current"><a href="contact.html">contact</a></li>
                 </ul>
             </nav>
