--- a/homeFiles/files/laurensteimle/photo.html
+++ b/homeFiles/files/laurensteimle/photo.html
@@ -13,6 +13,18 @@
 <body>
     <header class="v-header container">
         <div class="photo-wrapper">
+
+            <label class="mobile-menu-icon" for="toggle">&#9776</label>
+            <input class="mobile-menu-icon" type="checkbox" id="toggle">
+            <div class="mobile-nav">
+                <a class="current-mobile" href="index.html">home</a>
+                <a href="projects.html">projects</a>
+                <a href="photo.html">photo</a>
+                <a href="about.html">about</a>
+                <!-- <a href="updates.html">updates</a> -->
+                <a href="contact.html">contact</a>
+            </div>
+
             <div class="gallery">
                 <a href="media/photoGallery/photo1.png" data-lightbox="mygallery" data-title="ROMA, ITALIA"><img src="media/pgCropped/photo1.png"></a>
                 <a href="media/photoGallery/photo2.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo2.png"></a>
@@ -38,7 +50,7 @@
                     <li><a href="projects.html">projects</a></li>
                     <li class="current"><a href="photo.html">photo</a></li>
                     <li><a href="about.html">about</a></li>
-                    <li><a href="updates.html">updates</a></li>
+                    <!-- <li><a href="updates.html">updates</a></li> -->
                     <li><a href="contact.html">contact</a></li>
                 </ul>
             </nav>
