--- a/homeFiles/files/laurensteimle/projects.html
+++ b/homeFiles/files/laurensteimle/projects.html
@@ -7,10 +7,19 @@
     <link rel="stylesheet" href="style.css">
     <title>Lauren Steimle | projects</title>
 </head>
-<body>
+<body id="grey-theme">
     <header class="v-header container">
-        <div class="projects-wrapper">
-
+        <div class="projects-wrapper" id="grey-theme">
+                <label class="mobile-menu-icon" for="toggle">&#9776</label>
+                <input class="mobile-menu-icon" type="checkbox" id="toggle">
+                <div class="mobile-nav">
+                    <a class="current-mobile" href="index.html">home</a>
+                    <a href="projects.html">projects</a>
+                    <a href="photo.html">photo</a>
+                    <a href="about.html">about</a>
+                    <!-- <a href="updates.html">updates</a> -->
+                    <a href="contact.html">contact</a>
+                </div>
             <div class = "projects">
                 <div class="left-column">
                     <img src="media/logos/740.png" alt="image">
@@ -404,7 +413,7 @@
             
 
         </div>
-        <div class="left-panel">
+        <div class="left-panel" id="grey-theme">
             <div id="branding">
                 <img src="media/ls_logo_gold.png" alt="Lauren Steimle Designs Logo">
             </div>
@@ -414,7 +423,7 @@
                     <li class="current"><a href="projects.html">projects</a></li>
                     <li><a href="photo.html">photo</a></li>
                     <li><a href="about.html">about</a></li>
-                    <li><a href="updates.html">updates</a></li>
+                    <!-- <li><a href="updates.html">updates</a></li> -->
                     <li><a href="contact.html">contact</a></li>
                 </ul>
             </nav>
