formatted projects for mobile. Fixed other bugs on different pages

--- a/homeFiles/files/laurensteimle/about.html
+++ b/homeFiles/files/laurensteimle/about.html
@@ -24,6 +24,7 @@
                 <div class="left-about">
                     <h1>Hello,</h1>
                     <h2>it's me...</h2>
+                    <img class="about-img" src="media/ls_portrait.png">
                     <p><b>lauren steimle.</b></p>
                     <p>as a designer, i'm especially passionate about creating 
                         completely custom brands that tell a unique story. my 
