finished mobile nav, hooked up firebase contact form, other minor cosmetic fixes

--- a/homeFiles/files/laurensteimle/photo.html
+++ b/homeFiles/files/laurensteimle/photo.html
@@ -14,15 +14,18 @@
     <header class="v-header container">
         <div class="photo-wrapper">
 
-            <label class="mobile-menu-icon" for="toggle">&#9776</label>
-            <input class="mobile-menu-icon" type="checkbox" id="toggle">
-            <div class="mobile-nav">
-                <a class="current-mobile" href="index.html">home</a>
-                <a href="projects.html">projects</a>
-                <a href="photo.html">photo</a>
-                <a href="about.html">about</a>
-                <!-- <a href="updates.html">updates</a> -->
-                <a href="contact.html">contact</a>
+            <span class="burger-menu" onclick="openNav()">&#9776</span>
+
+            <div id="mobile-nav" class="overlay">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <div class="overlay-content">
+                    <a href="index.html">home</a>
+                    <a href="projects.html">projects</a>
+                    <a id="current-mobile" href="photo.html">photo</a>
+                    <a href="about.html">about</a>
+                    <!-- <a href="updates.html">updates</a> -->
+                    <a href="contact.html">contact</a>
+                </div>
             </div>
 
             <div class="gallery">
@@ -67,4 +70,16 @@
     </header>
     
 </body>
+
+    <!-- MOBILE NAV MENU JS -->
+    <script>
+        function openNav() {
+            document.getElementById("mobile-nav").style.height = "100%";
+        }
+        
+        function closeNav() {
+            document.getElementById("mobile-nav").style.height = "0%";
+        }
+    </script>
+
 </html>
